# NeuroCircuitry

./: .gitignore  QUICKSTART.md  pyproject.toml  requirements.txt
configs/: cremi3d.yaml  cremi3d_vista3d.yaml  default.yaml  microns.yaml  multi_dataset.yaml  snemi3d.yaml  snemi3d_cremi3d.yaml  snemi3d_vista3d.yaml
logs/snemi3d_vista3d/version_0/: events.out.tfevents.1770574792.umbriel-b200-125.875607.0  hparams.yaml
neurocircuitry/: __init__.py
neurocircuitry/callbacks/: __init__.py  tensorboard_volume.py
neurocircuitry/datamodules/: __init__.py  base.py  cremi3d.py  microns.py  multi_dataset.py  snemi3d.py
neurocircuitry/datasets/: __init__.py  base.py  cremi3d.py  microns.py  snemi3d.py
neurocircuitry/losses/: __init__.py  boundary.py  discriminative.py
neurocircuitry/models/: __init__.py  base.py  segresnet.py  vista3d.py
neurocircuitry/modules/: __init__.py  affinity_seg.py  instance_seg.py  semantic_seg.py  vista3d_module.py
neurocircuitry/preprocessors/: __init__.py  base.py  hdf5.py  nrrd.py  tiff.py
neurocircuitry/transforms/: __init__.py  connectomics.py
neurocircuitry/utils/: __init__.py  io.py  labels.py
notebooks/: 02_cremi3d_eda.ipynb  03_microns_eda.ipynb  README.md
scripts/: infer_vista3d.py  train.py  train_vista3d.py
tests/: __init__.py  test_datasets.py  test_snemi3d_dataset.py
