[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurocircuitry"
version = "0.1.0"
description = "A modular, extensible PyTorch Lightning-based infrastructure for connectomics research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "NeuroCircuitry Contributors"}
]
keywords = [
    "connectomics",
    "neuroscience",
    "deep-learning",
    "pytorch",
    "segmentation",
    "electron-microscopy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "torch>=2.0.0",
    "monai>=1.3.0",
    "pytorch-lightning>=2.0.0",
    "lightning>=2.0.0",
    "einops>=0.7.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "h5py>=3.8.0",
    "tifffile>=2023.0.0",
    "pynrrd>=1.0.0",
    "tensorboard>=2.13.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
wandb = [
    "wandb>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/neurocircuitry/neurocircuitry"
Documentation = "https://neurocircuitry.readthedocs.io"
Repository = "https://github.com/neurocircuitry/neurocircuitry"

[tool.setuptools.packages.find]
where = ["."]
include = ["neurocircuitry*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
